segunda-entrega/k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result
        name: result
        ports:
        - containerPort: 80
          name: result
        #readinessProbe:
        #  initialDelaySeconds: 5
        #  timeoutSeconds: 5
        #  httpGet:
        #    port: 80
        #    path: /results
