segunda-entrega/k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote
        name: vote
        ports:
        - containerPort: 80
          name: vote
        #readinessProbe:
        #  initialDelaySeconds: 5
        #  timeoutSeconds: 5
        #  httpGet:
        #    port: 80
        #    path: /vote
